2005-07-08  Dimitri Papadopoulos  <papadopo@users.sourceforge.net>

	* include/objsafe.h: New file.

2005-06-19  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/winldap.h (ldap_simple_bindW, ldap_simple_bind_sW,
	ldap_bindW, ldap_bind_sW): Change PCHAR arg to PWCHAR.
	Thanks to: Christian  <chhd at users dot sf dot net>

2005-06-18  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/richedit.h (GETTEXTEX): Correct name of lpUsedDefChar
	field.
	Thanks to: Saulius Menkevicius  <bobas at users dot sf dot net>

2005-06-18  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/winbase.h (GlobalDiscard): Define as macro.
	Thanks to: David Golub  <david_golub  at users dot sf dot net>

2005-05-13  Corinna Vinschen  <corinna@vinschen.de>

	* include/winnetwk.h (WNetGetResourceParentA): Add missing declaration.
	(WNetGetResourceParentW): Ditto.
	* include/ddk/ntifs.h (FILE_ID_FULL_DIRECTORY_INFORMATION): Define.
	(FILE_ID_BOTH_DIRECTORY_INFORMATION): Define.

2005-04-26  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/wininet.h (FtpGetFileSize): Add prototype.
	(FtpCommand[AW]): Correct prototypes.
	Reported by: <siger at users dot sf dot net>

2005-04-25  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/vfw.h (capCreateCaptureWindow[AW]): Add prototypes.
	(capGetDriverDescription[AW]): Likewise.

2005-04-03  Corinna Vinschen  <corinna@vinschen.de>

	* include/winnt.h (SE_UNDOCK_NAME TEXT): Define.
	(SE_MANAGE_VOLUME_NAME TEXT): Ditto.
	(SE_IMPERSONATE_NAME TEXT): Ditto.
	(SE_ENABLE_DELEGATION_NAME TEXT): Ditto.
	(SE_SYNC_AGENT_NAME TEXT): Ditto.

2005-03-16  Christopher Faylor  <cgf@timesys.com>

	* winclude/winnt.h (SYSTEM_LUID): Fix definitition invalidated by below
	change.

2005-03-16  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/winnt.h (_LUID): Add structure. Correct LUID typedef. 
	Thanks to:
	Paul-Christiaan Spruijtenburg <wakarimasu at users dot sf dot net>
